--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,6 @@
     "mongoose": "^8.15.2",
     "multer": "^2.0.1",
     "stripe": "^18.2.1",
-    "validator": "^13.15.15",
-    "xlsx": "^0.18.5"
+    "validator": "^13.15.15"
   }
 }
